# MLOPS23

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  minio.ipynb  pyproject.toml
.dvc/: config
data/: .gitignore  X_test_blobs.csv  X_test_blobs.json.dvc  X_train_blobs.csv  X_train_blobs.json.dvc  y_train_blobs.csv  y_train_blobs.json.dvc
minio/data/.minio.sys/: format.json
minio/data/data/X_test.json/575092cc-bad3-46c3-a8bd-1b6338867518/: part.1
minio/data/data/X_train.json/c404be2a-07e3-48a5-8aea-7dc05a2fd7c0/: part.1
minio/data/models/s2.pkl/142ff860-1ada-4a9c-991c-c18f50f73458/: part.1
models_data/: logreg.pkl  t1.pkl  t1k.pkl
src/: cnf.yml  minio_utils.py  pickle_utils.py  save_load.py
src/ml_ops_/: cnf.yml  main.py  utils.py
src/ml_ops_1/: main.py  utils.py
src/models/: BasicWrapper.py  MyLogisticModel.py  MyXGBoost.py  main.py
tests/: test.json  test_data.ipynb  train.json
