[tool.poetry]
name = "ml_ops_1"
version = "0.1.0"
description = "My hw WOW!"
authors = ["seldereyy <berestova.vika00@mail.ru>"]
readme = "README.md"
packages = [{include = "ml_ops_1", from ='src'}]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
fastapi = "^0.104.1"
numpy = "^1.26.1"
pandas = "^2.1.2"
pyyaml = "^6.0.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
scikit-learn = "^1.3.2"
xgboost = "^2.0.1"

[tool.poetry.scripts]
start = "ml_ops_1.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
