[tool.poetry]
name = "ml-ops"
version = "0.1.0"
description = "my hw"
authors = ["seldereyy <berestova.vika00@mail.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
numpy = "^1.26.2"
uvicorn = "^0.24.0.post1"
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"
pyyaml = "^6.0.1"
pandas = "^2.1.3"
minio = "^7.2.0"
dvc = "^3.33.3"
python-multipart = "^0.0.6"
dvc-s3 = "^3.0.1"

[tool.poetry.scripts]
start = "main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
